styles.css
body{
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;   
}

img {
    fill: white;
    stroke: white;
}
.container {
    display: grid;
    grid-template-rows: 1fr 5fr;
    grid-template-columns: 1fr 4fr;
}
.sidebar{
    display: grid;
    grid-template-rows: 1fr 4fr 2fr 4fr;
    grid-template-columns: 1fr 3fr;
    background-color: rgb(0, 153, 255);
    grid-area: 1 / 1 / 3 / 2;
    color: white;
    row-gap: 40px;
    font-weight: bold;
}
.dashboardpic{
    display: grid;
    grid-area: 1/1/2/2;
    place-items: center;
}
.dashboardtext{
    font-weight: bold;
    display: grid;
    align-items: center;
    grid-area: 1 / 2 / 2/ 3;
}
.menupic{
    display: grid;
    grid-area: 2/1/3/2;
    place-items: center;
}
.menutext{
    display: grid;
    align-items: center;
    font-size: 25px;
}
.settingpic{
    display: grid;
    place-items: center;
    grid-area: 3/1/4/2;
}
.settingtext{
    display: grid;
}

.header{
    display: grid;
    background-color: whitesmoke;
    grid-template-rows: 1fr 1.5fr;
    grid-template-columns: 1.5fr 1fr;
    align-items: center;
}

.searchbar{
    display: flex;
    gap: 20px;
    padding-left: 50px;
}

.profile{
    display: flex;
    place-items: center;
    justify-content: center;
    font-size: 25px;
    font-weight: bold;
    gap: 30px;
}

.grey-search-bar {
    width: 800px;
    padding: 12px 20px;
    font-size: 16px;
    background-color: #d4d2d2; 
    border-radius: 25px; 
    border: 1px solid #f1f1f1;
    outline: none;
    transition: all 0.3s ease;
}

.circle-container {
  width: 70px;
  height: 70px;
  background-color: #ffba3b;
  border-radius: 50%;    
  display: flex;   
  justify-content: center;
  align-items: center;
  overflow: hidden; 
}
.circle-container-blue {
  width: 70px;
  height: 70px;
  background-color: #3b79ff;
  border-radius: 50%;    
  display: flex;   
  justify-content: center;
  align-items: center;
  overflow: hidden; 
}
.circle-container-green {
  width: 70px;
  height: 70px;
  background-color: #62ff3b;
  border-radius: 50%;    
  display: flex;   
  justify-content: center;
  align-items: center;
  overflow: hidden; 
}
.circle-container-red {
  width: 70px;
  height: 70px;
  background-color: #ff3b3b;
  border-radius: 50%;    
  display: flex;   
  justify-content: center;
  align-items: center;
  overflow: hidden; 
}
.circle-container-big {
  width: 110px;      
  height: 110px;
  background-color: #ffba3b; 
  border-radius: 50%;  
  display: flex;  
  justify-content: center;
  align-items: center;
  overflow: hidden;  
}

.cat{
    width: 85%;
    height: 85%;
    object-fit: contain;
}

.greet{
    display: flex;
    align-items: center;
    padding-left: 50px;
    gap: 30px;
}

.hi{
    font-weight: bold;
    font-size: 20px;
}

.user{
    font-weight: bold;
    font-size: 35px;
}

.buttons{
    display: flex;
    gap:50px;
}

button {
  background-color: rgb(0, 153, 255);
  border: none;
  border-radius: 30px;
  color: white;
  padding: 15px 40px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 20px;
  font-weight: bold;
  cursor: pointer;
}

.main-content{
    background-color: rgb(223, 223, 223);
    display: grid;
    grid-template-rows: 1fr 13fr;
    grid-template-columns: 3fr 1.1fr;
    padding: 30px 20px 30px 20px;
}

.cards{
    grid-row: 2;
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
    padding-right: 20px;
}
.cards .card {
  background-color: #FFFFFF;
  text-align: left;
  border-radius: 20px;
  border-left: 10px solid #ffcc00;
  padding: 20px;

  display: grid;
  grid-template-rows: 4fr 1fr;
}
.cards .card .title {
    font-weight: bold;
    font-size: 25px;
    color: black;
}
.card p {
  color: rgb(92, 92, 92);
  font-weight: normal;
  font-size: 20px;
}

.card-buttons{
    display: flex;
    justify-content: flex-end;
    gap: 30px;
}

.ann-cards{
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    background-color: #FFFFFF;
    text-align: left;
    border-radius: 20px;
    padding: 10px 30px 10px 30px; 
}
.ann-cards .card {
    border-bottom: 2px solid #bbbbbb;
    margin:0;
    padding: 0;
}
.ann-cards p {
  color: rgb(92, 92, 92);
  font-weight: normal;
  font-size: 16px;
}
.ann-cards .title{
    font-weight: bold;
    font-size: 20px;
    color: black;
}

.announcements{
    grid-column: 2/3
}

.ann-grid{
    display: grid;
    grid-template-rows: 4fr 1fr 4fr;
}

.trending-text{
    padding-top: 30px;
    padding-bottom: 5px;
}
.trending-cards{
    display: grid;
    background-color: #FFFFFF;
    border-radius: 20px;
    padding: 10px 30px 10px 30px;
    align-items: center;
}

.trending-user{
    display: flex;
    align-items: center;
    gap: 20px;
    font-size: 18px;
}

.trending-user-name{
    display: grid;
    gap: 5px;
}

.nickname{
    color: grey;
}

